# roflcopter

./: .gitignore  Cargo.toml  rofl.py  run.py
rofl/: __init__.py  app.py  colors.py
src/: color.rs  lib.rs  main.rs  shaders.rs  state.rs
src/animations/: copter.rs  helper.rs  mod.rs  wall.rs
src/animations/copter/: animation.rs  copter.rs  draw.rs  enemy.rs  images.rs  mod.rs  raw_draw.rs  roflcopter.rs  shot.rs  state.rs
src/animations/wall/: mod.rs  shader.rs
src/animations/word_chaos/: mod.rs
src/helper/: mod.rs  structures.rs  texture.rs  vector.rs
