[package]
name = "roflcopter"
version = "0.1.0"
edition = "2021"

[lib]
name = "roflcopter_lib"
path = "src/lib.rs"

[[bin]]
name = "roflcopter"
path = "src/main.rs"

[dependencies]
better-panic = "0.3"
log = "0.4"
macroquad = "0.3"
roflcopter_snake = { git = "https://github.com/hildebro/roflcopter-snake.git", branch = "master" }
simplelog = { version = "0.12", default-features = false }
